Update : Router, Controller, views

--- a/src/views/user/userChoice.ejs
+++ b/src/views/user/userChoice.ejs
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pet Care : Iot</title>
+    <title>Pet Care : User</title>
   </head>
   <body>
-    <h1>Iot page</h1>
+    <h1>사용자 선택 화면 _ 넷플릭스 4명중 1택 화면</h1>
   </body>
 </html>
