--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pet Care : Iot</title>
+    <title>Pet Care : Home</title>
   </head>
   <body>
-    <h1>Iot page</h1>
+    <h1>Home</h1>
   </body>
 </html>
