--- a/src/views/login/login.ejs
+++ b/src/views/login/login.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>HTML Intro</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pet Care : Login</title>
   </head>
-
   <body>
-    <h1>로그인 페이지</h1>
+    <h1>login 화면 입니다.</h1>
   </body>
 </html>
