Add: css file, Update: index.ejs

--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -4,9 +4,49 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/reset.css" type="text/css" />
+    <link href="../css/index.css" rel="stylesheet" type="text/css" />
     <title>Pet Care : Home</title>
   </head>
   <body>
-    <h1>Home</h1>
+    <div class="container">
+      <div id="header">
+        <div class="header__left">
+          <span><i class="fa-solid fa-bars"></i></span>
+          <span>Pet Care</span>
+        </div>
+        <div class="header__right">
+          <button id="login">login</button>
+        </div>
+      </div>
+      <div id="main">
+        <div class="main_pet__img">
+          <!-- todo: pet base image -->
+        </div>
+        <div id="main_status">
+          <div class="main_status__alerts_list list">
+            <span>최근 알림</span>
+            <ul>
+              <!-- todo: alerts_list 구현  -->
+              <li>산책 예정일 확인</li>
+              <li>아무 알림 ...</li>
+            </ul>
+          </div>
+          <div class="main_status__calendar list">
+            <span>캘린더</span>
+            <ul>
+              <!-- todo: calendar 구현 -->
+              <li>00.00 산책</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://kit.fontawesome.com/c47a47dbc9.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
+
+<!--what's???-->
