--- a/src/views/login/login.ejs
+++ b/src/views/login/login.ejs
@@ -7,6 +7,13 @@
     <title>Pet Care : Login</title>
   </head>
   <body>
-    <h1>login 화면 입니다.</h1>
+    <h1>Pet Care</h1>
+    <form action="post" id="login">
+      <input type="text" placeholder="아이디 또는 이메일을 입력하세요." />
+      <input type="password" placeholder="비밀번호를 입력하세요." />
+      <button type="submit">로그인</button>
+    </form>
+    <!-- todo: 회원이 아니신가요? 가입하기 버튼 -->
+    <!-- todo: login or password 찾기 버튼-->
   </body>
 </html>
