--- a/src/views/css/index.css
+++ b/src/views/css/index.css
@@ -13,6 +13,14 @@
 
 .header__left {
   width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.header__left_hidden {
+  margin-top: 2em;
+  display: flex;
+  flex-direction: column;
 }
 
 .header__right {
