--- a/src/views/login/login.ejs
+++ b/src/views/login/login.ejs
@@ -4,16 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css" />
     <title>Pet Care : Login</title>
   </head>
   <body>
-    <h1>Pet Care</h1>
-    <form action="post" id="login">
-      <input type="text" placeholder="아이디 또는 이메일을 입력하세요." />
-      <input type="password" placeholder="비밀번호를 입력하세요." />
-      <button type="submit">로그인</button>
-    </form>
-    <!-- todo: 회원이 아니신가요? 가입하기 버튼 -->
-    <!-- todo: login or password 찾기 버튼-->
+    <div id="container">
+      <a href="/"><h1>Pet Care</h1></a>
+      <form action="post" id="login">
+        <div>
+          <label for="input_id">Id</label>
+          <input type="text" id="inputId" placeholder="아이디를 입력하세요." />
+        </div>
+        <div>
+          <label for="input_password">Password</label>
+          <input
+            type="password"
+            id="input_password"
+            placeholder="비밀번호를 입력하세요."
+          />
+        </div>
+        <button type="submit">로그인</button>
+      </form>
+      <div>
+        <!-- todo: 회원가입 버튼 -->
+        <!-- todo: login or password 찾기 버튼-->
+      </div>
+    </div>
   </body>
 </html>
