--- a/src/views/root/index.ejs
+++ b/src/views/root/index.ejs
@@ -12,17 +12,23 @@
     <div class="container">
       <div id="header">
         <div class="header__left">
-          <span><i class="fa-solid fa-bars"></i></span>
-          <span>Pet Care</span>
+          <span><i class="fa-solid fa-bars"></i> <span>Pet Care</span></span>
+          <div class="header__left_hidden">
+            <a href="/family">family messenger & calendar</a>
+            <a href="/iot">Internet of Things</a>
+            <a href="/pet">pet</a>
+            <a href="/edit">edit</a>
+          </div>
         </div>
+
         <div class="header__right">
-          <button id="login">login</button>
+          <a href="/login" id="login">login</a>
         </div>
       </div>
       <div id="main">
-        <div class="main_pet__img">
-          <!-- todo: pet base image -->
-        </div>
+        <a href="/pet">
+          <div class="main_pet__img"><img src="" alt="" /></div>
+        </a>
         <div id="main_status">
           <div class="main_status__alerts_list list">
             <span>최근 알림</span>
