pet부분: 이름변경 및 정리

--- a/src/views/pet/view.ejs
+++ b/src/views/pet/view.ejs
@@ -15,7 +15,7 @@
         align-items: center;
       }
     </style>
-    <title>Pet Care : Pet Detail</title>
+    <title>Pet Care | <%= pageTitle %>></title>
   </head>
   <body>
     <a href="/"><h1>Pet Care</h1></a>
