user: 회원가입, 로그인 / view css 변경

--- a/src/views/root/index.ejs
+++ b/src/views/root/index.ejs
@@ -4,55 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/reset.css" type="text/css" />
-    <link href="../css/index.css" rel="stylesheet" type="text/css" />
-    <title>Pet Care : Home</title>
+    <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css" />
+
+    <title>Pet Care | Home</title>
   </head>
   <body>
-    <div class="container">
-      <div id="header">
-        <div class="header__left">
-          <span><i class="fa-solid fa-bars"></i> <span>Pet Care</span></span>
-          <div class="header__left_hidden">
-            <a href="/family">family messenger & calendar</a>
-            <a href="/iot">Internet of Things</a>
-            <a href="/pet">pet</a>
-            <a href="/edit">edit</a>
-          </div>
-        </div>
-
-        <div class="header__right">
-          <a href="/login" id="login">login</a>
-        </div>
-      </div>
-      <div id="main">
-        <a href="/pet">
-          <div class="main_pet__img"><img src="" alt="" /></div>
-        </a>
-        <div id="main_status">
-          <div class="main_status__alerts_list list">
-            <span>최근 알림</span>
-            <ul>
-              <!-- todo: alerts_list 구현  -->
-              <li>산책 예정일 확인</li>
-              <li>아무 알림 ...</li>
-            </ul>
-          </div>
-          <div class="main_status__calendar list">
-            <span>캘린더</span>
-            <ul>
-              <!-- todo: calendar 구현 -->
-              <li>00.00 산책</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
+    <header>
+      <h1>Home</h1>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/login">Login</a></li>
+          <li><a href="/pet">Pet</a></li>
+          <li><a href="/iot">Iot</a></li>
+          <li><a href="/edit">Edit</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
     <script
       src="https://kit.fontawesome.com/c47a47dbc9.js"
       crossorigin="anonymous"
     ></script>
   </body>
 </html>
-
-<!--what's???-->
