--- a/src/views/pet/edit.ejs
+++ b/src/views/pet/edit.ejs
@@ -5,10 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css" />
+    <!-- <link rel="stylesheet" href="../css/flex.css" /> -->
+    <style>
+      * {
+        box-sizing: border-box;
+      }
+
+      body {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        height: auto;
+      }
+
+      form {
+        width: 400px;
+      }
+
+      input {
+        width: 100%;
+      }
+      input[type="text"] {
+        width: 100%;
+      }
+    </style>
     <title>Pet Care : Pet Edit</title>
   </head>
   <body>
-    <h1>Change Pet Edit</h1>
+    <h1>pet edit</h1>
     <form method="post">
       <div>
         <label for="input_name">Name</label>
@@ -69,7 +94,11 @@
           id="input_introduce"
         />
       </div>
-      <button type="submit">submit</button>
+      <input type="submit" value="save" />
+      <hr />
+      <span>Go </span>
+      <a href="/pet">Pet &rarr;</a><br />
     </form>
+    <footer>&copy; 2023 Petcare</footer>
   </body>
 </html>
