--- a/src/views/pet/upload.ejs
+++ b/src/views/pet/upload.ejs
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css" />
+    <link rel="stylesheet" href="../css/flex.css" />
     <title>Pet Care : Upload</title>
   </head>
   <body>
     <h1><%= pageTitle %></h1>
+    <span><%= errorMessage %></span>
     <form action="" method="post">
       <div class="preference">
         <label for="upload_name">Name</label>
@@ -40,11 +42,13 @@
       </div>
       <div class="preference">
         <label for="upload_introduce">introduce</label>
-        <input
-          type="text"
+        <textarea
           name="introduce"
+          id="upload_introduce"
+          cols="100"
+          rows="0"
           placeholder="반려동물을 소개해주세요!"
-        />
+        ></textarea>
       </div>
       <input type="submit" value="Upload Pet" />
     </form>
