--- a/src/views/pet/view.ejs
+++ b/src/views/pet/view.ejs
@@ -4,23 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      .under_line {
-        width: 100%;
-        border-bottom: 2px solid black;
-      }
-      .flex_container {
-        display: flex;
-        justify-content: end;
-        align-items: center;
-      }
-    </style>
+    <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css" />
     <title>Pet Care | <%= pageTitle %>></title>
   </head>
   <body>
-    <a href="/"><h1>Pet Care</h1></a>
-    <a href="upload"><button>Pet Upload</button></a>
-    <div>
+    <header>
+      <h1>Pet List</h1>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="#">Log out</a></li>
+          <li><a href="upload">upload Pet &rarr;</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
       <% if(pets != ""){ %> <% for(var i=0; i< pets.length; i++) { %>
       <div class="container">
         <h3><%= pets[i].name %></h3>
@@ -38,13 +36,15 @@
         </ul>
       </div>
       <div class="flex_container">
-        <a href="remove/<%= pets[i].id %>"><button>delete</button></a>
-        <a href="edit/<%= pets[i].id %>"><button>edit &rarr;</button></a>
+        <a href="remove/<%= pets[i].id %>">pet delete &rarr;</a><br />
+        <a href="edit/<%= pets[i].id %>">pet Edit &rarr;</a>
       </div>
       <div class="under_line"></div>
       <% }}else { %>
       <li>Sorry Nothing found.</li>
       <% } %>
-    </div>
+    </main>
+    <hr />
+    <footer>&copy; 2023 Petcare</footer>
   </body>
 </html>
