--- a/src/views/user/join.ejs
+++ b/src/views/user/join.ejs
@@ -37,12 +37,21 @@
         />
         <span><%=passwordErrorMessage %></span>
       </div>
+      <div>
+        <label for="input_Number">phoneNumber</label>
+        <input
+          type="text"
+          placeholder="phoneNumber"
+          id="input_Number"
+          name="phoneNumber"
+        />
+      </div>
       <input type="submit" value="Join" />
       <hr />
       <span>Go </span>
       <a href="/">Home &rarr;</a><br />
       <span>Already have an account? </span>
-      <a href="/login">Log in now &rarr;</a>
+      <a href="login">Log in now &rarr;</a>
     </form>
     <footer>&copy; 2023 Petcare</footer>
   </body>
