--- a/src/views/pet/upload.ejs
+++ b/src/views/pet/upload.ejs
@@ -11,7 +11,17 @@
   <body>
     <h1><%= pageTitle %></h1>
     <span><%= errorMessage %></span>
-    <form action="" method="post">
+    <form action="" method="post" enctype="multipart/form-data">
+      <div>
+        <label for="avatar">Avatar</label>
+        <input
+          type="file"
+          id="avatar"
+          name="avatar"
+          accept="image/*"
+          required
+        />
+      </div>
       <div class="preference">
         <label for="upload_name">Name</label>
         <input
