--- a/src/views/pet/upload.ejs
+++ b/src/views/pet/upload.ejs
@@ -14,13 +14,7 @@
     <form action="" method="post" enctype="multipart/form-data">
       <div>
         <label for="avatar">Avatar</label>
-        <input
-          type="file"
-          id="avatar"
-          name="avatar"
-          accept="image/*"
-          required
-        />
+        <input type="file" id="avatar" name="avatar" accept="image/*" />
       </div>
       <div class="preference">
         <label for="upload_name">Name</label>
