--- a/src/views/user/join.ejs
+++ b/src/views/user/join.ejs
@@ -11,7 +11,11 @@
   <body>
     <h1><%= pageTitle %></h1>
     <span><%=errorMessage %></span>
-    <form action="" method="post">
+    <form action="" method="post" enctype="multipart/form-data">
+      <div>
+        <label for="avatar">Avatar</label>
+        <input type="file" id="avatar" name="avatar" accept="image/*" />
+      </div>
       <div>
         <label for="input_name">name</label>
         <input name="name" type="text" placeholder="name" required />
