--- a/src/views/user/login.ejs
+++ b/src/views/user/login.ejs
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css" />
     <link rel="stylesheet" href="../css/flex.css" />
+    <link rel="stylesheet" href="../css/base.css" />
     <title>Pet Care | <%= pageTitle %></title>
+    <style>
+      body {
+        height: 100vh;
+      }
+    </style>
   </head>
   <body>
     <h1>login</h1>
